<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_enter_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jasonmckay.assignment63.EnterDetailsActivity">

    <TextView
        android:text="@string/please_select_vehicle_details"
        android:layout_width="251dp"
        android:layout_height="16dp"
        android:id="@+id/textView2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="@+id/activity_enter_details"
        android:layout_marginLeft="72dp"
        android:layout_marginStart="72dp"
        app:layout_constraintTop_toTopOf="@+id/activity_enter_details"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/activity_enter_details"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="0.55" />

    <TextView
        android:text="@string/engine_type"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:id="@+id/textViewEngineType"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="@+id/activity_enter_details"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginTop="40dp"
        app:layout_constraintRight_toRightOf="@+id/activity_enter_details"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="0.05" />

    <RadioGroup
        android:layout_width="100dp"
        android:layout_height="96dp"
        android:id="@+id/radioGroup"
        app:layout_constraintLeft_toLeftOf="@+id/activity_enter_details"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewEngineType"
        android:layout_marginTop="20dp">

        <RadioButton
            android:text="@string/diesel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/diesel"
            android:onClick="selectEngineType"/>

        <RadioButton
            android:text="@string/unleaded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/unleaded"
            android:onClick="selectEngineType"/>

        <RadioButton
            android:text="@string/leaded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/leaded"
            android:onClick="selectEngineType"/>
    </RadioGroup>

    <TextView
        android:text="@string/door_type"
        android:layout_width="67dp"
        android:layout_height="16dp"
        android:id="@+id/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="@+id/activity_enter_details"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:layout_marginTop="40dp"
        app:layout_constraintRight_toRightOf="@+id/activity_enter_details"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="0.05" />

    <RadioGroup
        android:layout_width="108dp"
        android:layout_height="96dp"
        android:id="@+id/radioGroup2"
        app:layout_constraintLeft_toLeftOf="@+id/activity_enter_details"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginTop="20dp">

        <RadioButton
            android:text="@string/four_door"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fourDoor"
            android:layout_weight="1"
            android:onClick="selectDoorType"/>

        <RadioButton
            android:text="@string/two_door"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/twoDoor"
            android:layout_weight="1"
            android:onClick="selectDoorType"/>

        <RadioButton
            android:text="@string/no_door"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/noDoor"
            android:layout_weight="1"
            android:onClick="selectDoorType"/>
    </RadioGroup>

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:onClick="goNext"
        app:layout_constraintLeft_toRightOf="@+id/button2"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        android:layout_marginTop="40dp"
        app:layout_constraintRight_toRightOf="@+id/activity_enter_details"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:onClick="goBack"
        app:layout_constraintLeft_toLeftOf="@+id/activity_enter_details"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        android:layout_marginTop="40dp" />

</android.support.constraint.ConstraintLayout>
