<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jasonmckay.assignment63.MainActivity">

    <TextView
        android:text="@string/select_an_option"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
        app:layout_constraintTop_toTopOf="@+id/activity_main"
        android:layout_marginTop="24dp"
        app:layout_constraintRight_toRightOf="@+id/activity_main" />

    <Button
        android:layout_width="90dp"
        android:layout_height="55dp"
        android:id="@+id/btnAddVehicle"
        android:text="@string/add_vehicle"
        android:gravity="center_horizontal|center"
        android:onClick="addVehicle"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        android:layout_marginTop="64dp"
        app:layout_constraintRight_toRightOf="@+id/activity_main" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
        app:layout_constraintTop_toTopOf="@+id/activity_main"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddVehicle"
        app:layout_constraintVertical_bias="0.63" />

    <Button
        android:text="@string/remove_vehicle"
        android:layout_width="90dp"
        android:layout_height="55dp"
        android:id="@+id/button3"
        android:onClick="removeVehicle"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
        app:layout_constraintTop_toBottomOf="@+id/btnAddVehicle"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="@+id/activity_main" />

    <Button
        android:text="@string/update_vehicle"
        android:layout_width="90dp"
        android:layout_height="55dp"
        android:id="@+id/button4"
        android:onClick="updateVehicle"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="@+id/activity_main" />

    <Button
        android:text="@string/list_vehicles"
        android:layout_width="90dp"
        android:layout_height="55dp"
        android:id="@+id/button5"
        android:onClick="listVehicles"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="@+id/activity_main" />

</android.support.constraint.ConstraintLayout>
